# pyShelf

./: .#config.py  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .tern-config  Dockerfile  Makefile  Pipfile  README.md  _Pipfile  __init__.py  build.sh  config.json  config.py  configure  contributing.md  create_db.sql  database.sh  docker-compose.yml  docs  doxygen.conf  entry.sh  importBooks  instal.sh  install  install.py  install.sh  installer  library.py  main.py  makeCollections  make_databases.sh  preinstall  pyShelf.py  pyShelf.service  pyproject.toml  pyrightconfig.json  pyshelf.sh  pyshelf_nginx.conf  (+7 more)
.github/: FUNDING.yml  SUPPORT.md
.ipynb_checkpoints/: scratchpad-checkpoint.ipynb
app/: config.py  main.py  pyShelf_ScanLibrary.py  pyproject.toml
app/data/: shelf.json
app/lib/: api_hooks.py  config.py  display.py  library.py  pyShelf.py  storage.py
app/tests/: config_test.py  library_test.py
data/: catalogue.db  shelf.json
docker/: .env  Dockerfile  README.md  config.json  development.docker-compose.yml  docker-compose.yml  pyshelf_nginx.conf
docs/: Automated Collections.html  Book Attachment System.html  Book Attachment System.wiki  Book Scraping System.html  Book Scraping System.wiki  Client.html  Description.html  Frontend.html  License.html  License.wiki  Notes.html  OPDS.html  Program Flow.html  REST API.html  TOC.html  doxygen.html  index.html  index.wiki
docs/html/: annotated.html  classapp_1_1config_1_1Config-members.html  classapp_1_1config_1_1Config.html  classapp_1_1lib_1_1api__hooks_1_1DuckDuckGo-members.html  classapp_1_1lib_1_1api__hooks_1_1DuckDuckGo.html  classapp_1_1lib_1_1display_1_1Frontend-members.html  classapp_1_1lib_1_1display_1_1Frontend.html  classapp_1_1lib_1_1library_1_1Catalogue-members.html  classapp_1_1lib_1_1library_1_1Catalogue.html  classapp_1_1lib_1_1pyShelf_1_1BookDisplay-members.html  classapp_1_1lib_1_1pyShelf_1_1BookDisplay.html  classapp_1_1lib_1_1pyShelf_1_1BookServer-members.html  classapp_1_1lib_1_1pyShelf_1_1BookServer.html  classapp_1_1lib_1_1pyShelf_1_1InitFiles-members.html  classapp_1_1lib_1_1pyShelf_1_1InitFiles.html  classapp_1_1lib_1_1pyShelf_1_1RequestHandler-members.html  classapp_1_1lib_1_1pyShelf_1_1RequestHandler.html  classapp_1_1lib_1_1storage_1_1Storage-members.html  classapp_1_1lib_1_1storage_1_1Storage.html  classes.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1api__hooks_1_1DuckDuckGo-members.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1api__hooks_1_1DuckDuckGo.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1config_1_1Config-members.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1config_1_1Config.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1library_1_1Catalogue-members.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1library_1_1Catalogue.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1pyShelf_1_1BookDisplay-members.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1pyShelf_1_1BookDisplay.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1pyShelf_1_1InitFiles-members.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1pyShelf_1_1InitFiles.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1storage_1_1Storage-members.html  classpyShelf_1_1src_1_1backend_1_1lib_1_1storage_1_1Storage.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1config__test_1_1TestConfig-members.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1config__test_1_1TestConfig.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1library__test_1_1TestCatalogue-members.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1library__test_1_1TestCatalogue.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1library__test_1_1Test__Catalogue-members.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1library__test_1_1Test__Catalogue.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1library__test_1_1Test__Config-members.html  classpyShelf_1_1src_1_1backend_1_1tests_1_1library__test_1_1Test__Config.html  (+46 more)
docs/html/HTML/: GTAGSROOT  defines.html  files.html  help.html  index.html  mains.html  rebuild.sh  style.css
docs/man/man3/: app_config_Config.3  app_lib_api_hooks_DuckDuckGo.3  app_lib_display_Frontend.3  app_lib_library_Catalogue.3  app_lib_pyShelf_BookDisplay.3  app_lib_pyShelf_BookServer.3  app_lib_pyShelf_InitFiles.3  app_lib_pyShelf_RequestHandler.3  app_lib_storage_Storage.3  md_src_interface_static_admin_css_vendor_select2_LICENSE-SELECT2.3  md_src_interface_static_admin_js_vendor_select2_LICENSE.3  pyShelf_src_backend_lib_api_hooks_DuckDuckGo.3  pyShelf_src_backend_lib_config_Config.3  pyShelf_src_backend_lib_library_Catalogue.3  pyShelf_src_backend_lib_pyShelf_BookDisplay.3  pyShelf_src_backend_lib_pyShelf_InitFiles.3  pyShelf_src_backend_lib_storage_Storage.3  pyShelf_src_backend_tests_config_test_TestConfig.3  pyShelf_src_backend_tests_library_test_TestCatalogue.3  pyShelf_src_backend_tests_library_test_Test_Catalogue.3  pyShelf_src_backend_tests_library_test_Test_Config.3  pyShelf_src_frontend_settings.3  pyShelf_src_frontend_urls.3  pyShelf_src_frontend_wsgi.3  pyShelf_src_interface_apps_InterfaceConfig.3  pyShelf_src_interface_migrations_0001_initial_Migration.3  pyShelf_src_interface_models_Books.3  pyShelf_src_manage.3  (+12 more)
frontend/: db.sqlite3  manage.py
frontend/frontend/: settings.py  urls.py  wsgi.py
frontend/interface/: models.py  views.py
lib/: .#library.py  \  api_hooks.py  display.py  library.py  pyShelf.py  storage.py
src/: Pipfile  __about__.py  __main__.py  manage.py
src/backend/: empty_bookshelf.sql  pyShelf.py  pyShelf_MakeCollections.py  pyShelf_ScanLibrary.py
src/client/: package.json  theme.tsx
src/frontend/: asgi.py  compile.sh  package.json  settings.py  urls.py  wsgi.py
src/interface/: admin.py  apps.py  forms.py  models.py  views.py
static/: index.html
static/css/: main.css
tests/: .#test_library.py  __init__.py  test_bookserver.py  test_library.py  test_storage.py  test_sysio.py
wiki/: Automated Collections.wiki  Book Attachment System.wiki  Book Scraping System.wiki  Client.wiki  Description.wiki  Frontend.wiki  Notes.wiki  OPDS.wiki  Program Flow.wiki  REST API.wiki  TOC.wiki  doxygen.wiki  index.wiki
(+266 files in other folders)
